tests/negative/runtime/split_empty_separator/input.ci
void main() {
    string[] parts = split("abc", "");
    print(toString(count(parts)) + "\n");
}
